Fix text overflow

--- a/style.css
+++ b/style.css
@@ -34,4 +34,5 @@
   -o-transform: scale(1.25);
   position:static;
   z-index:5;
+  overflow: scroll;
 }
